@@ -339,7 +339,7 @@
 
 			<group text="groups.plug.compressor" vexpand="false" hexpand="true" ipadding="0">
 
-				<grid rows="9" cols="16" spacing="0" bg.color="bg_schema">
+				<grid rows="9" cols="17" spacing="0" bg.color="bg_schema">
 					<!-- row 1 -->
 					<label text="labels.mode" pad.h="6" pad.v="4" vreduce="true"/>
 					<cell rows="9" bg.color="bg" pad.h="2" hreduce="true"><vsep/></cell>
@@ -355,7 +355,7 @@
 					<cell rows="9" bg.color="bg" pad.h="2" hreduce="true"><vsep/></cell>
 					<label text="labels.hold" pad.h="6" pad.v="4" vreduce="true"/>
 					<cell rows="9" bg.color="bg" pad.h="2" hreduce="true"><vsep/></cell>
-					<cell cols="2"><label text="labels.mix" pad.h="6" pad.v="4" vreduce="true"/></cell>
+					<cell cols="3"><label text="labels.mix" pad.h="6" pad.v="4" vreduce="true"/></cell>
 
 					<!-- row 2 -->
 					<ui:with bg.color="bg" pad.v="2" vreduce="true">
@@ -364,7 +364,7 @@
 						<cell cols="2"><hsep/></cell>
 						<cell cols="2"><hsep/></cell>
 						<hsep/>
-						<cell cols="2"><hsep/></cell>
+						<cell cols="3"><hsep/></cell>
 					</ui:with>
 
 					<!-- row 3 -->
@@ -388,6 +388,7 @@
 					<cell rows="2"><knob id="hold_l" pad.h="6" scolor="left"/></cell>
 					<label text="labels.signal.dry"/>
 					<label text="labels.signal.wet"/>
+					<button id="dwe_l" text="labels.signal.drywet"/>
 
 					<!-- row 4 -->
 					<knob id="al_l" scolor="attack_1" size="20" pad.h="6" pad.v="4"/>
@@ -396,6 +397,7 @@
 					<knob id="rt_l" scolor="left" size="20" pad.h="6" pad.v="4"/>
 					<knob id="cdr_l" scolor="dry" size="20" pad.h="6" pad.v="4"/>
 					<knob id="cwt_l" scolor="wet" size="20" pad.h="6" pad.v="4"/>
+					<knob id="cdw_l" size="20" pad.h="6" pad.v="4"/>
 
 					<!-- row 5 -->
 					<align valign="-1" pad.t="2">
@@ -415,6 +417,7 @@
 						<value id="hold_l"/>
 						<value id="cdr_l"/>
 						<value id="cwt_l"/>
+						<value id="cdw_l"/>
 					</ui:with>
 
 					<!-- row 6 -->
@@ -424,7 +427,7 @@
 						<cell cols="2"><hsep/></cell>
 						<cell cols="2"><hsep/></cell>
 						<hsep/>
-						<cell cols="2"><hsep/></cell>
+						<cell cols="3"><hsep/></cell>
 					</ui:with>
 
 					<!-- row 7 -->
@@ -448,6 +451,7 @@
 					<cell rows="2"><knob id="hold_r" pad.h="6" scolor="right"/></cell>
 					<label text="labels.signal.dry"/>
 					<label text="labels.signal.wet"/>
+					<button id="dwe_r" text="labels.signal.drywet"/>
 
 					<!-- row 8 -->
 					<knob id="al_r" scolor="attack_2" size="20" pad.h="6" pad.v="4"/>
@@ -456,6 +460,7 @@
 					<knob id="rt_r" scolor="right" size="20" pad.h="6" pad.v="4"/>
 					<knob id="cdr_r" scolor="dry" size="20" pad.h="6" pad.v="4"/>
 					<knob id="cwt_r" scolor="wet" size="20" pad.h="6" pad.v="4"/>
+					<knob id="cdw_r" size="20" pad.h="6" pad.v="4"/>
 
 					<!-- row 9 -->
 					<align valign="-1" pad.t="2">
@@ -475,6 +480,7 @@
 						<value id="hold_r"/>
 						<value id="cdr_r"/>
 						<value id="cwt_r"/>
+						<value id="cdw_r"/>
 					</ui:with>
 				</grid>
 			</group>
