@@ -129,6 +129,7 @@ keeping the same settings for the left and right channels.</p>
 	<li><b>Hold</b> - the time period the envelope holds it's maximum value before starting the release.</li>
 	<li><b>Mix Dry</b> - the amount of dry (unprocessed) signal, useful for parallel compression.</li>
 	<li><b>Mix Wet</b> - the amount of wet (processed) signal, useful for parallel compression.</li>
+	<li><b>Mix Dry/Wet</b> - the switch that enables dry/wet balance and control knob that controls this balance instead of separate dry and wet balance.</li>
 </ul>
 
 <p><b>'Signal' section:</b></p>
