@@ -4,6 +4,7 @@
 
 === 1.0.22 ===
 * Implemented Hold option.
+* Implemented Dry/Wet balance knob.
 * Updated build scripts and dependencies.
 
 === 1.0.21 ===
